# Zephyr-Project

workspace/apps/05_solution_pwm_knob/: prj.conf
workspace/apps/05_solution_pwm_knob/boards/: esp32s3_devkitc.conf  esp32s3_devkitc.overlay
workspace/apps/modules/number_of_leds/: CMakeLists.txt  Kconfig  number_of_leds.c  number_of_leds.h
workspace/apps/modules/number_of_leds/zephyr/: module.yaml
workspace/apps/multiple_esp_comm/: CMakeLists.txt
workspace/apps/multiple_esp_comm/boards/: esp32s3_devkitc.conf  esp32s3_devkitc.overlay
workspace/apps/multiple_esp_comm/include/: gpio_get.h  poten_get.h  uart_comm.h
workspace/apps/multiple_esp_comm/src/: gpio_get.c  main.c  poten_get.c  uart_comm.c
